--- a/frontend/src/components/PerfilPerro/PerfilPerro.css
+++ b/frontend/src/components/PerfilPerro/PerfilPerro.css
@@ -45,13 +45,15 @@
     align-items: center; /* Alinea los comentarios a la izquierda */
     margin: 0px 100px;
     padding-bottom: 80px;
-
+    max-width: 40vw;
   }
   
   .comentarios-lista {
-    width: 100%; /* Asegúrate de que ocupa todo el ancho disponible */
-    /* max-width: 350px;  */
+    width: 40vw;
+    max-width: 100%; 
+    overflow-wrap: break-word;
     text-align: left;
+    word-break: break-word;
   }
   
  .perfil-perro h2 {
@@ -75,17 +77,27 @@
   
   
   .comentario {
+    position: relative;
     background-color: #e9ecef;
     border-radius: 4px;
     padding: 10px;
     margin: 5px 0;
     display: flex;
     align-items: center;
+    max-width: 100%; 
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+  }
+
+  .comentario strong{
+    cursor: pointer;
+    white-space: nowrap;
+    margin-right: 0.4rem;
   }
   
   .comentario-avatar {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     margin-right: 10px;
   }
@@ -93,6 +105,12 @@
   .comentario-texto {
     color: #555;
     font-size: 0.95rem;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    width: 100%;
+    overflow-wrap: break-word;
+    word-break: break-word;
   }
   
   .comentario-form {
@@ -143,4 +161,101 @@
 .perfil-perro-actions button{
   background-color: #ee6d0a;
   padding: 0.5rem;
+}
+
+.opciones-comentario {
+  cursor: pointer;
+}
+
+.popup-comentario {
+  position: absolute;
+  top: 30%;
+  left: 99%; /* Ajusta esta posición para que esté junto al comentario */
+  background: white;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  width: 10rem;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 7%;
+    left: -15px;  /* Ajusta esta distancia para controlar dónde aparece la colita */
+    transform: translateY(-50%);  /* Centra la colita verticalmente */
+    border-width: 8px;
+    border-style: solid;
+    z-index: 101;
+    border-color: transparent white transparent transparent; /* Crea el triángulo */
+  }
+}
+
+.popup-comentario button {
+  display: block;
+  width: 100%;
+  margin-bottom: 5px;
+  background: #FA9B2F;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.popup-comentario button:hover {
+  background-color: #e48f2f;
+}
+
+.popup-comentario button:last-child {
+  margin-bottom: 0;
+}
+
+
+
+.popup-edit-comentario-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  padding: 0;
+}
+
+.popup-edit-comentario {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  width: 40vw;
+  max-width: none;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popup-edit-comentario h4 {
+  margin-bottom: 10px;
+}
+
+.popup-edit-comentario button {
+  margin: 5px 10px;
+  padding: 8px 12px;
+  background-color: #FA9B2F;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.popup-edit-comentario button:hover {
+  background-color: #e48f2f;
 }
